Finished review, need to proof read

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -42,7 +42,7 @@ of Next Generation Communication Network",
     author    = "J. Miller",
     publisher = "BBC News",
     title     = "Vodafone and O2 Begin Limited Roll-Out of 4G Networks",
-    url       = "www.bbc.com/news/technology-23868082"
+    url       = "Accessed 21 Nov 2017"
 }
 
 @misc{gartner4g,
@@ -50,6 +50,7 @@ of Next Generation Communication Network",
     author    = "Gartner",
     title     = "4G Standard",
     url       = "https://www.gartner.com/it-glossary/4g-standard/",
+    note =      "Accessed on 21 Nov 2017"
 }
 
 @misc{ericssondev,
@@ -57,6 +58,7 @@ of Next Generation Communication Network",
     author    = "Ericsson",
     title     = "Internet of Things Outlook, June 2017",
     url       = "https://www.ericsson.com/en/mobility-report/internet-of-things-outlook",
+    note =      "Accessed on 28 Oct 2017"
 }
 
 @misc{ieee5g,
@@ -64,6 +66,7 @@ of Next Generation Communication Network",
     author    = "Institute  of  Electrical  and  Electronics  Engineers",
     title     = "Standards - 5G",
     url       = "https://5g.ieee.org/standards",
+    note =      "Accessed on 17 Oct 2017"
 }
 
 @article{mmwave,
@@ -144,16 +147,18 @@ Future Wireless Networks",
 
 @misc{gart5g,
 % Gartner Research Circle survey
-    author    = "Gartner",
-    title     = "Gartner End-User Survey Finds Three-Quarters of Respondents Are Willing to Pay More for 5G",
-    url       = "https://www.gartner.com/newsroom/id/3780466",
+    author =    "Gartner",
+    title =     "Gartner End-User Survey Finds Three-Quarters of Respondents Are Willing to Pay More for 5G",
+    url =       "https://www.gartner.com/newsroom/id/3780466",
+    note =      "Accessed on 24 Nov 2017"
 }
 
 @misc{health,
 % World Health Organisation
-    author    = "World Health Organisation",
-    title     = "Electromagnetic Fields and Public Health",
-    url       = "http://www.who.int/peh-emf/publications/facts/fs304/en/",
+    author =    "World Health Organisation",
+    title =     "Electromagnetic Fields and Public Health",
+    url =       "http://www.who.int/peh-emf/publications/facts/fs304/en/",
+    note =      "Accessed on 25 Nov 2017"
 }
 
 @misc{emfproj,
@@ -161,12 +166,14 @@ Future Wireless Networks",
     author    = "World Health Organisation",
     title     = "International EMF Project",
     url       = "http://www.who.int/peh-emf/project/EMF_Project/en/index2.html",
+    note      = "Accessed on 26 Nov 2017"
 }
 
 @misc{wp5g,
 % Ericsson White Paper
-    author = "Ericsson",
-    title = "5G Systems",
-    year = "2017",
-    url = "https://www.ericsson.com/assets/local/publications/white-papers/wp-5g-systems.pdf"
+    author  = "Ericsson",
+    title   = "5G Systems",
+    year    = "2017",
+    url     = "https://www.ericsson.com/assets/local/publications/white-papers/wp-5g-systems.pdf",
+    note    = "Accessed on 27 Nov 2017"
 }
