--- a/main.tex
+++ b/main.tex
@@ -15,18 +15,19 @@
 \maketitle
 
 \begin{abstract}
-This will be the abstract - short passage, intro, basic ideas, what review will be about etc. Filler text. Five lines.
+Mobile communications can today be considered an important, almost essential component of modern life. From the development of smartphones to the arrival of the \textit{Internet of Things}, recent advancements in technology have led to increased demands on mobile communications networks, leaving current fourth generation systems struggling to keep up. Acknowledging issues faced by current networks, we consider some of the proposed individual technologies for the forthcoming fifth generation of mobile communications standards and their respective advantages and disadvantages. We also examine the obstacles, both technical and non-technical, that may disrupt the implementation of fifth generation networks. While these issues may be considered discouraging, in this review the many positive, achievable use cases for fifth generation systems are also recognised. 
+
 \end{abstract}
 \begin{IEEEkeywords}
-5G, telecommunications, mobile networks, .
+5G, telecommunications, mobile communications, networks.
 \end{IEEEkeywords}
 
 \section{Introduction}
 In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology \textit{(1G)} in the 1980s, right up to the fourth generation \textit{(4G)} available in most countries around the world today, we have seen exponential improvement in services.
 
-Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 18 billion devices connected to the internet in 2017 \cite{ericssondev} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
+Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews \textit{et al} claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 18 billion devices connected to the internet in 2017 \cite{ericssondev} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
 
-In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation \textit{(5G)} of standards, and the possible applications of 5G.
+In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation \textit{(5G)} of standards, problems to overcome, and applications of 5G.
 
 \subsection{A Brief History}
 In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed in the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. 
@@ -120,6 +121,7 @@ Remote surgery or examination in medicine would reap the benefits of 5G, seeing 
 There are endless possible use cases for 5G systems besides these examples, such as autonomous transport, smart cities, and emergency service communications \cite{wp5g}. Only large scale deployment of 5G networks will reveal all possible applications.
 
 \section{Conclusion}
+The way we communicate and incorporate technology into both our personal lives and wider society is changing greatly with each passing year. Based on current forecasts, our expectations and demands will soon surpass the capabilities of current 4G systems. While the technologies mentioned in this review have shown considerable potential, there is still much research to be carried out before 5G systems can overcome the obstacles it faces and be considered a global solution to the problems we face. The possibilities regarding applications of 5G networks are alone a great motivation to see widespread implementation of 5G systems, and coupled with the need to improve on 4G systems, will be the driving force behind the advancements to come. It is human nature to seek more efficient, faster solutions in any aspect of life, and the lead up to this new era of mobile communications can undoubtedly be considered a truly exciting time in the industry.
 
 \printbibliography
 \end{document}
